tests/validprograms/project/test_fibonacci.tds
Program {
	void print(Int x) extern;
	Int fib(Int n) {
		if (n == 0) then {
			return 0;
		}
		
		if (n == 1) then {
			return 1;
		}
		return fib(n - 1) + fib(n - 2);
	}

	void main() {
		print(fib(10));
	}
}

