tests/invalidprograms/semantic/test_too_many_arguments.tds
Program {
	Int f(Int x, Int y) {
		return x + y - y;
	}

	void main() {
		f(0, 1, 2);
	}
}

